add_subdirectory(libs)
add_subdirectory(uqm)

# add_executable(uqm config.h
#                    endian_uqm.h
#                    options.c options.h
#                    port.c port.h
#                    types.h
#                    uqm.c
#                    uqmversion.h)
# target_link_libraries(uqm PRIVATE uqm_game libs uqm_libs_external uqm_options)
